--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Chima Ogudoro",
   "license": "MIT",
   "dependencies": {
+    "@types/multer-s3": "^3.0.0",
     "aws-sdk": "^2.1199.0",
     "bcrypt": "^5.0.1",
     "class": "^0.1.4",
@@ -22,19 +23,24 @@
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^5.1.1",
     "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "multer-s3": "^3.0.1",
     "supertest": "^6.2.4",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/stoppable": "^1.1.1",
     "reflect-metadata": "^0.1.13"
   }
