--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "scripts": {
     "dev": "cross-env APP_ENV=local nodemon ./src/server.ts",
     "build": "rimraf ./build && tsc && cp -R src/lib/mail build/src/lib",
-    "test": " cross-env NODE_ENV=test APP_ENV=test mocha -r ts-node/register --spec test/**/*.test.ts"
+    "test": " cross-env NODE_ENV=test APP_ENV=test mocha -r ts-node/register --spec test/**/*.test.ts",
+    "seed": "cross-env APP_ENV=local nodemon ./src/scripts/index.ts"
   },
   "author": "Chima Ogudoro",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.154.0",
     "@types/multer-s3": "^3.0.0",
-    "aws-sdk": "^2.1199.0",
+    "aws-sdk": "^2.1073.0",
     "bcrypt": "^5.0.1",
     "class": "^0.1.4",
     "class-transformer": "^0.5.1",
@@ -28,10 +30,11 @@
     "helmet": "^5.1.1",
     "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
-    "multer-s3": "^3.0.1",
+    "multer": "^1.4.4",
     "supertest": "^6.2.4",
     "validator": "^13.7.0"
   },
@@ -40,6 +43,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.184",
     "@types/multer": "^1.4.7",
     "@types/stoppable": "^1.1.1",
     "reflect-metadata": "^0.1.13"
