--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "cross-env APP_ENV=local nodemon ./src/server.ts",
-    "build": "rimraf ./build && tsc && cp -R src/lib/mail build/src/lib",
+    "build": "rimraf ./build && tsc",
     "test": " cross-env NODE_ENV=test APP_ENV=test mocha -r ts-node/register --spec test/**/*.test.ts",
     "seed": "cross-env APP_ENV=local nodemon ./src/scripts/index.ts"
   },
@@ -20,7 +20,6 @@
     "aws-sdk": "^2.1073.0",
     "bcrypt": "^5.0.1",
     "class": "^0.1.4",
-    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
@@ -30,13 +29,9 @@
     "helmet": "^5.1.1",
     "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "supertest": "^6.2.4",
-    "validator": "^13.7.0"
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -46,6 +41,8 @@
     "@types/lodash": "^4.14.184",
     "@types/multer": "^1.4.7",
     "@types/stoppable": "^1.1.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
