--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+APP_SECRET=
+PORT=
+
 DB_URI=
 
 
@@ -8,7 +11,8 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
 
-S3_ENDPOINT=
-S3_ACCESS_KEY=
-S3_SECRET_KEY=
-S3_BUCKET=
+
+AWS_ID=
+AWS_SECRET=
+AWS_BUCKET_NAME=
+AWS_REGION=
