--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "cross-env APP_ENV=staging ./src/server.ts",
+    "start": "cross-env APP_ENV=local nodemon ./src/server.ts",
     "build": "rimraf ./build && tsc",
     "test": " cross-env NODE_ENV=test APP_ENV=test mocha -r ts-node/register --spec test/**/*.test.ts",
     "seed": "cross-env APP_ENV=local nodemon ./src/scripts/index.ts"
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
