--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "cross-env APP_ENV=local nodemon ./src/server.ts",
+    "start": "cross-env APP_ENV=local ./src/server.ts",
     "build": "rimraf ./build && tsc",
     "test": " cross-env NODE_ENV=test APP_ENV=test mocha -r ts-node/register --spec test/**/*.test.ts",
     "seed": "cross-env APP_ENV=local nodemon ./src/scripts/index.ts"
