--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
-  }
+  },
+  "engines": {
+    "npm": "8.3.1",
+    "node": ">=16.14.0"
+}
 }
