--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "start": "cross-env APP_ENV=local ./src/server.ts",
+    "dev": "cross-env APP_ENV=local nodemon ./src/server.ts",
     "test": " cross-env NODE_ENV=test APP_ENV=test mocha -r ts-node/register --spec test/**/*.test.ts",
     "seed": "cross-env APP_ENV=local nodemon ./src/scripts/index.ts"
   },
