--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "multer": "^1.4.4",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "redis": "^4.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -50,5 +51,5 @@
   "engines": {
     "npm": ">=8.3.1",
     "node": ">=16.14.0"
-}
+  }
 }
